--- a/game.html
+++ b/game.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>資安桌遊主畫面</title>
+  <title>角色驗證頁面</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, set, get, onValue, update } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-    import { renderRoleUI } from './components/roleActions.js';
+    import { getDatabase, ref, get, onValue, set } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
@@ -19,117 +18,64 @@
       appId: "1:220150025271:web:f4cfe780ebfd73e826c3b2",
       measurementId: "G-6T9GW9LVD7"
     };
+
     const app = initializeApp(firebaseConfig);
     const db = getDatabase();
 
     const urlParams = new URLSearchParams(window.location.search);
-    const currentRoom = urlParams.get('room');
-    const currentUser = urlParams.get('player');
+    const player = urlParams.get("player");
+    const room = urlParams.get("room");
 
     document.addEventListener("DOMContentLoaded", async () => {
-      document.getElementById("playerName").textContent = currentUser;
+      // 顯示暱稱
+      document.getElementById("playerName").textContent = player;
 
-      const userRef = ref(db, `rooms/${currentRoom}/players/${currentUser}`);
-      const snap = await get(userRef);
-      if (!snap.exists()) {
-        await set(userRef, { money: 100 });
-      } else if (!snap.val().money) {
-        await update(userRef, { money: 100 });
+      // 檢查與設定初始金額
+      const moneyRef = ref(db, `rooms/${room}/players/${player}/money`);
+      const moneySnap = await get(moneyRef);
+      if (!moneySnap.exists()) {
+        await set(moneyRef, 100); // ✅ 設定初始金額為 100
       }
 
-      // 顯示角色名稱
-      const role = snap.val().role || "未設定";
-      document.getElementById("playerRole").textContent = role;
-    });
-
-    // 監聽餘額變動
-    const moneyRef = ref(db, `rooms/${currentRoom}/players/${currentUser}/money`);
-    onValue(moneyRef, (snap) => {
-      document.getElementById("money").textContent = `$${snap.val()}`;
-    });
-
-    // 投資選項填入其他玩家
-    const allPlayersRef = ref(db, `rooms/${currentRoom}/players`);
-    onValue(allPlayersRef, (snap) => {
-      const all = snap.val();
-      const target = document.getElementById("target");
-      target.innerHTML = "";
-      for (let name in all) {
-        if (name !== currentUser) {
-          const opt = document.createElement("option");
-          opt.value = name;
-          opt.textContent = name;
-          target.appendChild(opt);
-        }
-      }
-    });
-
-    // 投資行為
-    window.invest = async function () {
-      const target = document.getElementById("target").value;
-      const amount = parseInt(document.getElementById("amount").value);
-      const status = document.getElementById("status");
-
-      if (!target || isNaN(amount) || amount <= 0) {
-        status.textContent = "請輸入有效金額與對象。";
-        return;
-      }
-
-      const userRef = ref(db, `rooms/${currentRoom}/players/${currentUser}/money`);
-      const userSnap = await get(userRef);
-      const balance = userSnap.val();
-      if (amount > balance) {
-        status.textContent = "你的錢不夠啦！";
-        return;
-      }
-
-      await update(ref(db, `rooms/${currentRoom}/players/${currentUser}`), {
-        money: balance - amount
+      // 監聽金額變化
+      onValue(moneyRef, (snap) => {
+        const money = snap.val();
+        document.getElementById("money").textContent = money !== null ? `$${money}` : "$0";
       });
 
-      const targetRef = ref(db, `rooms/${currentRoom}/players/${target}`);
-      const targetSnap = await get(targetRef);
-      const targetMoney = targetSnap.exists() ? targetSnap.val().money || 0 : 0;
-      const oldInvestors = targetSnap.val().investors || {};
-
-      await update(targetRef, {
-        money: targetMoney + amount,
-        investors: {
-          ...oldInvestors,
-          [currentUser]: (oldInvestors[currentUser] || 0) + amount
-        }
-      });
-
-      status.textContent = `✅ 成功投資 ${target} $${amount}`;
-    };
-
-    renderRoleUI(currentUser, currentRoom);
+      // 取得角色
+      const roleRef = ref(db, `rooms/${room}/players/${player}/role`);
+      const roleSnap = await get(roleRef);
+      if (roleSnap.exists()) {
+        const role = roleSnap.val();
+        document.getElementById("role").textContent = `角色：${role}`;
+      } else {
+        document.getElementById("role").textContent = "❌ 無法讀取角色資訊";
+      }
+    });
   </script>
   <style>
-    body { font-family: sans-serif; padding: 1rem; max-width: 480px; margin: auto; background: #f4f4f4; }
-    .card { background: white; padding: 1.2rem; margin-bottom: 1rem; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    button, input, select { width: 100%; padding: 0.8rem; font-size: 1rem; margin-top: 0.5rem; margin-bottom: 0.5rem; }
+    body {
+      font-family: sans-serif;
+      padding: 1.5rem;
+      max-width: 480px;
+      margin: auto;
+      background: #f9f9f9;
+    }
+    .card {
+      background: white;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
   <div class="card">
-    <h2>玩家：<span id="playerName"></span></h2>
+    <h2>玩家：<span id="playerName">載入中...</span></h2>
     <p>💰 餘額：<strong id="money">$0</strong></p>
-    <p>角色：<span id="playerRole"></span></p>
-  </div>
-
-  <div id="roleActions"></div>
-
-  <div class="card">
-    <h3>我要投資：</h3>
-    <label for="target">選擇對象：</label>
-    <select id="target"></select>
-
-    <label for="amount">投資金額：</label>
-    <input type="number" id="amount" placeholder="輸入金額，如20" min="1" />
-
-    <button onclick="invest()">確認投資</button>
-    <p id="status"></p>
+    <p id="role">角色：載入中...</p>
   </div>
 </body>
 </html>
