--- a/game.html
+++ b/game.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>角色驗證頁面</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>角色動作頁面</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getDatabase, ref, get, onValue, set } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
@@ -27,47 +27,72 @@
     const room = urlParams.get("room");
 
     document.addEventListener("DOMContentLoaded", async () => {
-      // 顯示暱稱
       document.getElementById("playerName").textContent = player;
 
-      // 檢查與設定初始金額
+      const playerRef = ref(db, `rooms/${room}/players/${player}`);
       const moneyRef = ref(db, `rooms/${room}/players/${player}/money`);
-      const moneySnap = await get(moneyRef);
-      if (!moneySnap.exists()) {
-        await set(moneyRef, 100); // ✅ 設定初始金額為 100
-      }
-
-      // 監聽金額變化
-      onValue(moneyRef, (snap) => {
-        const money = snap.val();
-        document.getElementById("money").textContent = money !== null ? `$${money}` : "$0";
+      
+      // 設定初始金額（若尚未有）
+      get(moneyRef).then(snap => {
+        if (!snap.exists()) {
+          set(moneyRef, 100);
+        }
       });
 
-      // 取得角色
+      // 監聽金額變化
+      onValue(moneyRef, snap => {
+        document.getElementById("money").textContent = "$" + (snap.val() ?? 0);
+      });
+
+      // 取得角色並顯示角色操作介面
       const roleRef = ref(db, `rooms/${room}/players/${player}/role`);
       const roleSnap = await get(roleRef);
       if (roleSnap.exists()) {
         const role = roleSnap.val();
         document.getElementById("role").textContent = `角色：${role}`;
+        renderRolePanel(role);
       } else {
         document.getElementById("role").textContent = "❌ 無法讀取角色資訊";
       }
     });
+
+    function renderRolePanel(role) {
+      const panel = document.getElementById("rolePanel");
+      if (role === "詐騙者") {
+        panel.innerHTML = `
+          <h4>詐騙者功能</h4>
+          <p>可以在任何回合使用「一鍵捲款」捲走所有資金！</p>
+          <button>🧨 一鍵捲款</button>
+        `;
+      } else if (role === "投資客") {
+        panel.innerHTML = `
+          <h4>投資客功能</h4>
+          <p>收集投資並可分配回報。</p>
+          <button>📤 分配利潤</button>
+        `;
+      } else if (role === "普通人") {
+        panel.innerHTML = `
+          <h4>普通人功能</h4>
+          <p>可以選擇是否投資或建造。</p>
+          <button>💰 進行投資</button>
+        `;
+      }
+    }
   </script>
   <style>
     body {
       font-family: sans-serif;
-      padding: 1.5rem;
-      max-width: 480px;
+      background: #f0f0f0;
+      padding: 1rem;
+      max-width: 500px;
       margin: auto;
-      background: #f9f9f9;
     }
     .card {
-      background: white;
-      padding: 1rem;
+      background: #fff;
+      padding: 1.2rem;
       margin-bottom: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
   </style>
 </head>
@@ -76,6 +101,9 @@
     <h2>玩家：<span id="playerName">載入中...</span></h2>
     <p>💰 餘額：<strong id="money">$0</strong></p>
     <p id="role">角色：載入中...</p>
+  </div>
+  <div class="card" id="rolePanel">
+    <p>正在載入角色功能...</p>
   </div>
 </body>
 </html>
